Fix misaligned label in mail confirmation dialog (#8774)
This PR aims to fix #8460 .

The e-mail address label in the popup was misaligned with the change... button next to it.

--- a/client/post-editor/style.scss
+++ b/client/post-editor/style.scss
@@ -233,6 +233,7 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	margin-right: 5px;
+	vertical-align: bottom;
 }
 
 .post-editor__confirmation-dialog-reasoning {
